# Dioxus-Template

./: .env.example  .prettierignore  Cargo.toml  Dioxus.toml  README.md  build.rs  docker-compose.yml  generate_db_data.ipynb  just.nu  justfile  mobile.toml  oof.parquet  pyproject.toml  pyrightconfig.json  tailwind.config.js
alpha-omega/: Cargo.toml  Dioxus.toml  build.rs  input.css
alpha-omega/app/: Cargo.toml
alpha-omega/app/src/: lib.rs
alpha-omega/cli/: Cargo.toml
alpha-omega/cli/src/: main.rs
alpha-omega/components/: Cargo.toml
alpha-omega/components/src/: job_panels.rs  lib.rs  overview_panel.rs
alpha-omega/db/: Cargo.toml  build.rs
alpha-omega/db/migrations/: V1__init.sql
alpha-omega/db/queries/: i.md  mod.rs  users.sql
alpha-omega/db/src/: cornucopia.rs  lib.rs
alpha-omega/public/: tailwind.css
alpha-omega/public/data/: upwork.parquet
alpha-omega/server/: Cargo.toml
alpha-omega/server/src/: users.rs
alpha-omega/src/: dx_logger.rs  index.html  main.rs  router.rs
alpha-omega/src/components/: mod.rs  overview_panel.rs  user_info.rs
alpha-omega/src/db/: conn.rs  models.rs
assets/data/: users.parquet
dx-toml-schema/: Cargo.toml
dx-toml-schema/src/: main.rs
dx-toml-schema/src/configs/: dioxus_cfg.rs  mod.rs
migrations/2024-11-03-205047_init/: up.sql
scripts/: install.nu  runner.nu  services.nu  tailwind.nu  targets.nu
src/: main.rs  router.rs
src/components/: chat.rs  desktop_chat_panel.rs  mod.rs  overview_panel.rs  user_info.rs
src/db/: models.rs  schema.rs
