[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "alpha-omega"
repository = { workspace = true }
version = "0.0.1"

[dependencies]
app = { path = "./app" }
db = { path = "./db" }
server = { path = "./server" }


axum = { workspace = true, optional = true }
deadpool-postgres = { workspace = true, optional = true }
dioxus = { workspace = true, optional = true, features = ["axum", "default", "desktop", "fullstack", "mobile", "router", "ssr", "web"] }
dioxus-web = { workspace = true, optional = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }


[features]
desktop = ["dep:dioxus", "dioxus/default", "dioxus/desktop", "dioxus/devtools", "dioxus/router"]
mobile = ["dep:dioxus", "dioxus/default", "dioxus/devtools", "dioxus/mobile", "dioxus/router"]
server = ["dep:axum", "dep:deadpool-postgres", "dep:dioxus", "dioxus/axum", "dioxus/default", "dioxus/devtools", "dioxus/router", "dioxus/ssr"]
web = ["dep:dioxus", "dioxus-web/hydrate", "dioxus/default", "dioxus/devtools", "dioxus/fullstack", "dioxus/router", "dioxus/web"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = { workspace = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = false, features = ["registry", "std"] }

[target.'cfg(not(any(target_arch = "wasm32", target_os = "android", target_os = "ios")))'.dependencies]
tracing-subscriber = { workspace = true, default-features = false, features = ["fmt", "registry", "std"] }
