[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "alpha-omega"
repository = { workspace = true }
version = "0.0.1"


[dependencies]
dioxus = { workspace = true, features = ["fullstack", "router"] }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
diesel = { version = "2.2.4", features = ["chrono", "postgres", "r2d2", "serde_json", "uuid"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
dotenvy = { workspace = true }

[features]
default = []
server = ["dioxus/server"]
web = ["dioxus/web"]

[target.'cfg(target_family = "wasm")'.dependencies]
chrono = { version = "0.4.38", features = ["serde", "wasmbind"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["chrono", "postgres", "r2d2", "serde_json", "uuid"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.12", features = ["js"] }
