[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "dx-toml-shcema"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dioxus = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
