[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "app"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
components = { path = "../components" }

dioxus = { workspace = true }
polars = { workspace = true }
