[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "cli"
repository = { workspace = true }
version = "0.0.1"

[dependencies]
db = { path = "../db" }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
fake = { workspace = true }
parquet = { workspace = true }
polars = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
