[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "cli"
repository = { workspace = true }
version = "0.0.1"

[dependencies]

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
deadpool-postgres = { workspace = true }
dotenvy = { workspace = true }
fake = { workspace = true }
parquet = { workspace = true }
polars = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { version = "1.41.0" }
tokio-postgres = { version = "0.7.12" }
uuid = { workspace = true }
