[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "db"
repository = { workspace = true }
version = "0.0.1"

[dependencies]
anyhow = { workspace = true }
cornucopia_async = { workspace = true }
deadpool-postgres = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
pgvector = { workspace = true }
postgres-types = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.132"
time = { workspace = true }
tokio-postgres = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
cornucopia = { workspace = true }
dotenvy = { workspace = true }
postgres = { workspace = true }
refinery = { workspace = true }
