[package]
authors = { workspace = true }
description = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
name = "server"
repository = { workspace = true }
version = "0.0.1"

[dependencies]
db = { path = "../db" }

axum = { workspace = true }
dioxus = { features = ["axum", "fullstack", "ssr"], workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
